Final version for project hand in.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <script src='https://use.fontawesome.com/ca28529f02.js'></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,500,600,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="resources/styles/style.css">
+    <!-- Flickity test begins -->
+    <link rel="stylesheet" href="/path/to/flickity.css" media="screen">
+    <!-- Flickity test ends -->
 </head>
 
 <body>
@@ -191,7 +194,7 @@
                         <div class="popular__prodimgdiv-hover">
                             <a href="">ADD TO CART</a>
                         </div>
-                        <img src="resources/images/image_pop1.jpg">
+                        <img src="resources/images/image_pop1.jpg" alt="image of some cactuses">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Pebbled backpack</p>
@@ -210,7 +213,7 @@
                         <div class="popular__prodimgdiv-hover">
                             <a href="">ADD TO CART</a>
                         </div>                   
-                        <img src="resources/images/image_pop2.jpg">
+                        <img src="resources/images/image_pop2.jpg" alt="image of a single plant in a white pot">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Flower print dress</p>
@@ -229,7 +232,7 @@
                         <div class="popular__prodimgdiv-hover">
                             <a href="">ADD TO CART</a>
                         </div>
-                        <img src="resources/images/image_pop3.jpg">
+                        <img src="resources/images/image_pop3.jpg" alt="image of a glass terrarium with an air plant">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Printed cotton t-shirt</p>
@@ -245,7 +248,7 @@
                         <div class="popular__prodimgdiv-hover">
                             <a href="">ADD TO CART</a>
                         </div>
-                        <img src="resources/images/image_pop4.jpg">
+                        <img src="resources/images/image_pop4.jpg" alt="image of a white vase with a long branch plant">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Slim-fit cotton T-shirt</p>
@@ -264,7 +267,7 @@
                         <div class="popular__prodimgdiv-hover">
                             <a href="">ADD TO CART</a>
                         </div>
-                        <img src="resources/images/image_pop5.jpg">
+                        <img src="resources/images/image_pop5.jpg" alt="image of a single plant in a small white pot">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Zip leather jacket</p>
@@ -280,7 +283,7 @@
                         <div class="popular__prodimgdiv-hover">
                             <a href="">ADD TO CART</a>
                         </div>
-                        <img src="resources/images/image_pop6.jpg">
+                        <img src="resources/images/image_pop6.jpg" alt="image of a hanging plant">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Flower print dress</p>
@@ -299,7 +302,7 @@
                         <div class="popular__prodimgdiv-hover">
                             <a href="">ADD TO CART</a>
                         </div>
-                        <img src="resources/images/image_pop7.jpg">
+                        <img src="resources/images/image_pop7.jpg" alt="image of a leafy plant in a clear vase with water">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Combined weekend bag</p>
@@ -318,7 +321,7 @@
                         <div class="popular__prodimgdiv-hover">
                             <a href="">ADD TO CART</a>
                         </div>
-                        <img src="resources/images/image_pop8.jpg">
+                        <img src="resources/images/image_pop8.jpg" alt="image of a spiky succulent">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Tortoiseshell retro sunglasses</p>
@@ -334,7 +337,7 @@
                         <div class="popular__prodimgdiv-hover">
                             <a href="">ADD TO CART</a>
                         </div>
-                        <img src="resources/images/image_pop9.jpg">
+                        <img src="resources/images/image_pop9.jpg" alt="image of the petals only of a branchy flower">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Slim-fit Patrick jeans</p>
@@ -350,7 +353,7 @@
                         <div class="popular__prodimgdiv-hover">
                             <a href="">ADD TO CART</a>
                         </div>
-                        <img src="resources/images/image_pop10.jpg">
+                        <img src="resources/images/image_pop10.jpg" alt="image of a short succulent with wide spike leaves">
                     </div>
                     <div class="popular__prodpricing">
                         <p class="popular__description">Embroidered message cap</p>
@@ -368,7 +371,7 @@
         <div class="quote__leftbox">
             <h2>What Our Customer Saying?</h2>
             <div class="quote__leftbox__imgdiv">
-                <img src="resources/images/image_quote.png">
+                <img src="resources/images/image_quote.png" alt="image of quotation marks">
             </div>
             <p class="italic">Duis mollis, est non commando luctus, nisi erat liguia, eget lacinia adio sem nec elit.  Fusce dapibus, telius ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
             <p><span class="author">ROSINANTE BROOK . WEB DESIGN</span></p>
@@ -381,12 +384,12 @@
         </div>
         <div class="quote__rightbox">
             <div class="quote__rightbox__mediabut">
-                <a href=""><img src="resources/images/icon_play.png"></a>
+                <a href=""><img src="resources/images/icon_play.png" alt="play button for video"></a>
             </div>
             <div class="quote__rightbox__txt">
                 <h1 class="font__pressstyle">PLANTS</h1>
                 <div class="quote__rightbox__planticondiv">
-                    <img src="resources/images/icon_plantscomic.png">
+                    <img src="resources/images/icon_plantscomic.png" alt="comic image done all in white of 3 different plants">
                 </div>
                 <h1 class="font__pressstyle">STORE</h1>
             </div>
@@ -405,7 +408,7 @@
             <div class="blog__articlebox__articlecont">
                 <div class="blog__articlebox">
                     <div class="blog__articlebox__imgdiv">
-                        <img src="resources/images/image_fishnets1.jpg">
+                        <img src="resources/images/image_fishnets1.jpg" alt="image of a wildflower">
                     </div>
                     <div class="blog__articlebox__text">
                         <p>December 14, 2017</p>
@@ -415,7 +418,7 @@
                 </div>
                 <div class="blog__articlebox">
                     <div class="blog__articlebox__imgdiv">
-                        <img src="resources/images/image_fishnets2.jpg">
+                        <img src="resources/images/image_fishnets2.jpg" alt="image of a leafy plant in a clear vase with water">
                     </div>
                     <div class="blog__articlebox__text">
                         <p>December 14, 2017</p>
@@ -425,7 +428,7 @@
                 </div>
                 <div class="blog__articlebox">
                     <div class="blog__articlebox__imgdiv">
-                        <img src="resources/images/image_fishnets3.jpg">
+                        <img src="resources/images/image_fishnets3.jpg" alt="image of a table with a plant and a frame with art in it">
                     </div>
                     <div class="blog__articlebox__text">
                         <p>December 14, 2017</p>
@@ -457,19 +460,19 @@
             </div>
             <div class="signup__locationimgscont">
                 <div class="signup__locationimgdiv">
-                        <img src="resources/images/image_loc1.png">
+                        <img src="resources/images/image_loc1.png" alt="logo for authentic athletics department">
                 </div>
                 <div class="signup__locationimgdiv">
-                        <img src="resources/images/image_loc2.png">
+                        <img src="resources/images/image_loc2.png" alt="logo for drewville">
                 </div>
                 <div class="signup__locationimgdiv">
-                        <img src="resources/images/image_loc3.png">
+                        <img src="resources/images/image_loc3.png" alt="logo for southside sears">
                 </div>
                 <div class="signup__locationimgdiv">
-                        <img src="resources/images/image_loc4.png">
+                        <img src="resources/images/image_loc4.png" alt="logo for yourkshire">
                 </div>
                 <div class="signup__locationimgdiv">
-                        <img src="resources/images/image_loc5.png">
+                        <img src="resources/images/image_loc5.png" alt="logo for lugiano restaurante">
                 </div>
             </div>
         </div>
@@ -525,22 +528,22 @@
                     <h3>Instagram</h3>
                     <div class="contact__rightbox__gallery">
                         <div class="contac__rightbox__instagalleryimgdiv">
-                            <a href=""><img src="resources/images/image_insta1.jpg"></a>
+                            <a href=""><img src="resources/images/image_insta1.jpg" alt="image of a plant in a white pot"></a>
                         </div>
                         <div class="contac__rightbox__instagalleryimgdiv">
-                            <a href=""><img src="resources/images/image_insta2.jpg"></a>
+                            <a href=""><img src="resources/images/image_insta2.jpg" alt="image of a spike plant in a white planter"></a>
                         </div>
                         <div class="contac__rightbox__instagalleryimgdiv">
-                            <a href=""><img src="resources/images/image_insta3.jpg"></a>
+                            <a href=""><img src="resources/images/image_insta3.jpg" alt="image of a branch plant in a white vase"></a>
                         </div>
                         <div class="contac__rightbox__instagalleryimgdiv">
-                            <a href=""><img src="resources/images/image_insta4.jpg"></a>
+                            <a href=""><img src="resources/images/image_insta4.jpg" alt="image of a branchy plant in a clear vase with water"></a>
                         </div>
                         <div class="contac__rightbox__instagalleryimgdiv">
-                            <a href=""><img src="resources/images/image_insta5.jpg"></a>
+                            <a href=""><img src="resources/images/image_insta5.jpg" alt="image of a spiky succulent"></a>
                         </div>
                         <div class="contac__rightbox__instagalleryimgdiv">
-                            <a href=""><img src="resources/images/image_insta6.jpg"></a>
+                            <a href=""><img src="resources/images/image_insta6.jpg" alt="image of a plant in a pot on a table in front of a frame with art"></a>
                         </div>
                     </div>
                 </div>
@@ -649,6 +652,10 @@
             </div>
         </div>
     </footer>
+
+<!-- Flickity test begins -->
+<script src="/path/to/flickity.pkgd.min.js"></script>
+<!-- Flickity test ends -->
 
 </body>
 
