--- a/index.html
+++ b/index.html
@@ -164,11 +164,13 @@
                             <p>07 items</p>
                         </div>
                     </a>
+                    <!-- This span is to control where the anchor lands because of the fixed header -->
+                    <span id="shop"></span>
                 </div>
         </div>
     </section>
 
-    <section class="popular" id="shop">
+    <section class="popular">
         <div class="wrapper">
             <h2>Popular Products</h2>
             <div class="popular__titleunderlinesdiv">
@@ -396,7 +398,7 @@
             <h5>AMAZING SHOP THEMES</h5>
         </div>
     </section>
-
+    
     <section class="blog" id="blog">
         <div class="wrapper">
             <h2>From Our Blog</h2>
