Added Google Analytics.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115892554-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-115892554-3');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -61,6 +70,10 @@
             </a>
             <a href="link.html"><i class="fa fa-search" aria-hidden="true"></i></a>
             <a href="link.html"><i class="fa fa-bars" aria-hidden="true"></i></a>
+
+            <!-- This is where the hamburger menu starts -->
+            <!-- This is where the hamburger menu ends -->
+
         </nav>
     </header>
 
