--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <meta name="msapplication-wide310x150logo" content="resources/images/widetile.png" />
     <meta name="msapplication-square310x310logo" content="resources/images/largetile.png" />
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l"
+	 crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
+	 crossorigin="anonymous"></script>
+
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,500,600,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="resources/styles/style.css">
 
@@ -60,7 +65,7 @@
                 <div class="header__notecircle">
                     <p>2</p>
                 </div>  
-                <div="header__rightnav__bagicondiv">                    <!-- <?xml version="1.0" encoding="utf-8"?> -->
+                <div="header__rightnav__bagicondiv">
                     <svg class="header__rightnav__bagicon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18px" height="24px" viewBox="0 0 18 24">
                         <g>
                             <path d="M 1.5 24C 1.5 24 16.5 24 16.5 24 17.33 24 18 23.33 18 22.5 18 22.5 18 6 18 6 18 5.17 17.33 4.5 16.5 4.5 16.5 4.5 13.49 4.5 13.49 4.5 13.46 2.01 11.46-0 9-0 6.54-0 4.54 2.01 4.51 4.5 4.51 4.5 1.5 4.5 1.5 4.5 0.67 4.5-0 5.17-0 6-0 6-0 22.5-0 22.5-0 23.33 0.67 24 1.5 24ZM 16.5 6C 16.5 6 16.5 22.5 16.5 22.5 16.5 22.5 1.5 22.5 1.5 22.5 1.5 22.5 1.5 6 1.5 6 1.5 6 16.5 6 16.5 6ZM 9 1.5C 10.63 1.5 11.96 2.84 11.99 4.5 11.99 4.5 6.01 4.5 6.01 4.5 6.04 2.84 7.37 1.5 9 1.5ZM 6.75 9C 6.75 9 11.25 9 11.25 9 11.66 9 12 8.66 12 8.25 12 7.84 11.66 7.5 11.25 7.5 11.25 7.5 6.75 7.5 6.75 7.5 6.34 7.5 6 7.84 6 8.25 6 8.66 6.34 9 6.75 9Z" />
@@ -69,10 +74,28 @@
                 </div>
             </a>
             <a href="link.html"><i class="fa fa-search" aria-hidden="true"></i></a>
-            <a href="link.html"><i class="fa fa-bars" aria-hidden="true"></i></a>
+            <!-- <a href="link.html"><i class="fa fa-bars" aria-hidden="true"></i></a> -->
+            <nav>
+                <ul>
+                    <li class="hamburger__menu" tab-index="0">
+                        <a href="">
+                            <div class="hamburger__menu__imgdiv">
+                                <!-- The commented out line is if you would rather use an image over using font-awesome -->
+                                <!-- <img src="./public/images/icon_hamburger.png" alt=""> -->
+                                <i class="fas fa-bars"></i>
+                            </div>
+                        </a>
+                        <ul class="hamburger__menu__content">
+                            <li><a href="#home">HOME</a></li>
+                            <li><a href="#about">ABOUT</a></li>
+                            <li><a href="#pages">PAGES</a></li>
+                            <li><a href="#shop">SHOP</a></li>
+                            <li><a href="#blog">BLOG</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
 
-            <!-- This is where the hamburger menu starts -->
-            <!-- This is where the hamburger menu ends -->
 
         </nav>
     </header>
@@ -83,7 +106,7 @@
                 <i class="fas fa-arrow-left fa-2x"></i>
             </a>
         </div>
-        <div class="hero__centercontent"> -->
+        <div class="hero__centercontent">
             <h2>Over Collections 2017</h2>
             <h1>Living & Styling With Plants</h1>
             <div class="hero__shopnowbut">
@@ -447,7 +470,7 @@
                 <form action="">
                     <input type="text" name="firstname" placeholder="Enter your email" required>
                     <button>
-                        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                        <i class="far fa-envelope"></i>
                     </button>
                 </form>                    
             </div>
